syntax = "proto3";

package metrics;

service MetricsService {
  rpc AddLocation (LocationRequest) returns (MetricsResponse);
  rpc UpdateDeviceBrand (UpdateDeviceBrandRequest) returns (UpdateDeviceBrandResponse);
}

message LocationRequest {
  string deviceId = 1;
  double latitude = 2;
  double longitude = 3;
}

message MetricsResponse {
  double distance = 1;
  int32 positionCount = 2;
}

message UpdateDeviceBrandRequest {
  string deviceId = 1;
  string newBrand = 2;
}

message UpdateDeviceBrandResponse {
  bool success = 1;
}
